--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <header>
         <!-- Profile picture inside header, left-aligned near name -->
-        <img src="/storage/emulated/0/Pictures/Create Album/IMG_20250321_102715.jpg" alt="Lekha shree S" class="profile-picture">
+        <img src="IMG_20250321_102715.jpg" alt="Lekha shree S" class="profile-picture">
         <div class="header-content">
             <h1>Lekha shree S</h1>
             <p>B.Sc. Computer Science</p>
